2006-04-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pl.msg: Updated (thanks to Andrzej Smyk)

2006-04-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/xml_stream.erl: Cleanup

	* src/ejabberd_service.erl: Updated to use ejabberd_receiver

2006-04-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Minor fix

	* src/ejabberd_c2s.erl: Bugfix (thanks to Sergei Golovan)

	* doc/guide.tex: Updated (thanks to Sergei Golovan)

	* src/msgs/nl.msg: Updated (thanks to Sander Devrieze)

2006-04-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/ejabberd.cfg.example: Updated (thanks to Badlop)

	* doc/guide.tex: Updated (thanks to Badlop)

2006-04-07  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fixed pubsub root node creation
	(conflict error was send on node creation)

2006-04-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: SASL Anonymous + Anonymous login support
	(thanks to Mickael Remond and Magnus Henoch)
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/cyrsasl.erl: Likewise
	* src/cyrsasl_anonymous.erl: Likewise
	* src/ejabberd.cfg.example: Likewise

2006-04-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/expat_erl.c: Use binaries for CDATA
	* src/xml.erl: Likewise

2006-04-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/mod_configure.erl: Updated translation strings (thanks to
	Sergei Golovan)
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/ejabberd_s2s_in.erl: Changed a path to PKIX includes (thanks
	to Sergei Golovan)

2006-04-01  Mickael Remond  <mickael.remond@process-one.net>

	* src/Makefile.in: Added an option to compile ejabberd with debug
	print-out (make ejabberd_debug=true).
	* src/ejabberd_c2s.erl: Added a new debug printout: We can now print